# collectorinfra

./: .encenv.example  .env.example  .gitignore  CLAUDE.md  Makefile  checkpoints.db-shm  checkpoints.db-wal  dbhub.toml  pyproject.toml  requirements.txt  spec.md
.playwright-mcp/: page-2026-04-02T07-33-42-675Z.yml
agents/: __init__.py  run.py
config/: global_synonyms.yaml
db/: docker-compose.yml  setup.sh
db2/: docker-compose.yml  sample_query.py  setup.sh
ddl/: auth_tables.sql
docs/: 01_requirements.md  02_decision.md  03_setup_guide.md  04_architecture.md  05_system_architecture.md  06_software_architecture.md  07_processing_flow.md  08_code_flow.md  09_db_configuration_guide.md  10_polestar_test_env_setup.md  11_web_ui_progress_specification.md  async_programming_guide.md  decision.md  requirements_testenv.md  verification_report.md  verification_report_15.md  verification_report_plan19.md  verification_report_plan23.md  verification_report_plan28.md  verification_report_plan31.md  verification_report_plan32.md  verification_report_plan33.md  verification_report_plan34.md  verification_report_plan37.md  verification_report_schemacache.md  verification_report_schemacache_new_features.md  verification_report_semantic_routing.md
mcp_server/: .env.example  config.toml  pyproject.toml
mcp_server/mcp_server/: __init__.py  __main__.py  config.py  db.py  security.py  server.py  tools.py
mcp_server/tests/: __init__.py  test_config.py  test_security.py  test_tools.py
plans/: 01-project-structure.md  02-state-schema.md  03-graph-design.md  04-nodes.md  05-dbhub-integration.md  06-api-server.md  07-security.md  08-ui-screens.md  09-semantic-routing.md  10-document-processing.md  15-mcp-server.md  16-field-cache-test-plan.md  17-testenv-and-synonym-dict.md  18-claude-skills-plugins.md  19-excel-csv-llm-pipeline.md  20-eav-pivot-query-support.md  21-eav-field-mapper-support.md  22-llm-intelligent-field-mapping.md  23-ui-progress-and-excel-fix.md  24-ui-playwright-test-plan.md  25-eav-query-field-validation.md  26-schema-redis-cache-optimization.md  27-schema-analyzer-dependency-removal.md  28-gemini-api-support.md  29-cache-policy-violations-fix.md  30-cache-validity-and-invalidation-audit.md  31-field-mapping-failure-fix.md  32-eav-manual-profile-config.md  33-eav-join-directive-enforcement.md  33-resource-conf-id-join-prevention.md  34-polestar-domain-system-prompt.md  35-excel-empty-data-fix.md  36-data-sufficiency-check-improvement.md  37-eav-prefix-comparison-fix.md  (+10 more)
(+298 files in other folders)
